# xcel3d

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  External.cmake
Builder/: CLAUDE.md  ModelAccessor.h  PartAccessor.h
CMake/: FindBOOST.cmake  FindGLEW.cmake  FindOSG.cmake  MacroUtils.cmake  MsvcX64Crt.cmake  XcelConfig.cmake.in  macros.cmake
Common/: CMakeLists.txt  ComponentPool.h  Entity.h  ISystem.h  Logger.h  Registry.h  ThreadPool.h
Common/Source/: Logger.cpp  Registry.cpp  ThreadPool.cpp
Examples/GlfwStandalone/: CMakeLists.txt  SceneLoader.h  WorldSceneReceiver.h  main.cxx
Graphics/: BatchDrawable.h  BatchingSystem.h  CLAUDE.md  CMakeLists.txt  Camera.h  ColorTable.h  CommandRecorder.h  Component.h  Components.h  CoordTable.h  DescriptorManager.h  DeviceContext.h  DrawCall.h  Drawable.h  ForwardRenderPass.h  FrustumCullPass.h  GpuBuffer.h  HexTessellator.h  IPass.h  InstanceDrawable.h  Mesh.h  MeshTessellator.h  Pipeline.h  PrimitiveSet.h  RenderGraph.h  RenderGraphBuilder.h  RenderPass.h  ScalarTable.h  StaticMesh.h  Swapchain.h  TessellationStrategy.h  VulkanContext.h  WindowContext.h  World.h
Graphics/Manipulator/: IManipulator.h  ManipulatorController.h  ManipulatorGeometry.h  ManipulatorPass.h  PickingRay.h  SectionCutManipulator.h  TranslateManipulator.h  ViewManipulator.h
Graphics/Source/: BatchDrawable.cpp  BatchingSystem.cpp  Camera.cpp  ColorTable.cpp  CommandRecorder.cpp  CoordTable.cpp  DescriptorManager.cpp  DeviceContext.cpp  ForwardRenderPass.cpp  FrustumCullPass.cpp  GpuBuffer.cpp  HexTessellator.cpp  InstanceDrawable.cpp  Mesh.cpp  MeshTessellator.cpp  Pipeline.cpp  PrimitiveSet.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderPass.cpp  ScalarTable.cpp  StaticMesh.cpp  Swapchain.cpp  TessellationStrategy.cpp  VulkanContext.cpp  WindowContext.cpp  World.cpp
Graphics/Source/Manipulator/: ManipulatorController.cpp  ManipulatorGeometry.cpp  ManipulatorPass.cpp  SectionCutManipulator.cpp  TranslateManipulator.cpp  ViewManipulator.cpp
IO/: CLAUDE.md  CMakeLists.txt
IO/Animation/: AnimationCatalogue.cpp  AnimationCatalogue.h  AnimationFrame.h  AnimationStream.cpp  AnimationStream.h  AnimationTrackInfo.h  FrameCache.cpp  FrameCache.h
IO/Core/: FileStreamSink.h  FileStreamSource.h  FormatRegistry.cpp  FormatRegistry.h  IFormatPlugin.h  IFormatReader.h  IFormatWriter.h  IOManager.cpp  IOManager.h  ISceneReceiver.h  IStreamSink.h  IStreamSource.h  MemoryStreamSource.h  PluginLoader.cpp  PluginLoader.h  SceneBuilder.cpp  SceneBuilder.h  SceneLoader.h
IO/Formats/: XcelFormat.cpp  XcelFormat.h
IO/Formats/Plugins/AssimpPlugin/: AssimpFormatReader.cpp  AssimpFormatReader.h  CMakeLists.txt
IO/Scene/: ChunkDescriptor.h  MeshData.h  SceneDocument.cpp  SceneDocument.h  SceneNode.h  SkeletonData.h
Kernel/: CMakeLists.txt  ColorTable.cpp  ColorTable.h  CoordTable.cpp  CoordTable.h  Mesh.h  MeshTessellator.cpp  MeshTessellator.h  PrimitiveSet.cpp  PrimitiveSet.h  ScalarTable.cpp  ScalarTable.h  TessellationStrategy.cpp  TessellationStrategy.h
Kernel/Source/: ColorTable.cpp  CoordTable.cpp  Mesh.cpp  MeshTessellator.cpp  ScalarTable.cpp
Renderer/: Application.h  BatchDrawable.h  BatchingSystem.h  CMakeLists.txt  Camera.h  CommandRecorder.h  Component.h  DescriptorManager.h  DeviceContext.h  DrawCall.h  Drawable.h  ForwardRenderPass.h  FrustumCullPass.h  GpuBuffer.h  GpuImage.h  HardwareCaps.h  IPass.h  InstanceDrawable.h  MeshDrawable.h  OcclusionCullPass.h  OitPass.h  PassOptions.h  Pipeline.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphConfig.h  RenderOptions.h  RenderPass.h  Swapchain.h  TextureManager.h  VulkanContext.h  WindowContext.h  World.h
Renderer/Manipulator/: IManipulator.h  ManipulatorController.h  ManipulatorGeometry.h  ManipulatorPass.h  SectionCutManipulator.h  TranslateManipulator.h  ViewManipulator.h
Renderer/Source/: BatchDrawable.cpp  BatchingSystem.cpp  BoostJsonImpl.cpp  Camera.cpp  CommandRecorder.cpp  DescriptorManager.cpp  DeviceContext.cpp  ForwardRenderPass.cpp  FrustumCullPass.cpp  GpuBuffer.cpp  GpuImage.cpp  InstanceDrawable.cpp  MeshDrawable.cpp  OcclusionCullPass.cpp  OitPass.cpp  Pipeline.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderGraphConfig.cpp  RenderOptions.cpp  RenderPass.cpp  Swapchain.cpp  TextureManager.cpp  VulkanContext.cpp  WindowContext.cpp  World.cpp
Renderer/Source/Manipulator/: ManipulatorController.cpp  ManipulatorGeometry.cpp  ManipulatorPass.cpp  SectionCutManipulator.cpp  TranslateManipulator.cpp  ViewManipulator.cpp
Scripts/: build-assimp.ps1
Shaders/: CLAUDE.md  bindless_textures.glsl  depth_prepass.frag  depth_prepass.vert  frustum_cull.comp  hiz_build.comp  lighting.glsl  manipulator.frag  manipulator.vert  material.glsl  mesh.frag  mesh.vert  occlusion_cull.comp  oit_accumulate.frag  oit_composite.frag  oit_composite.vert  render_graph.json  scene_ubo.glsl
Tests/: CMakeLists.txt  CoreTests.cpp  IOAssimpLoadTests.cpp  KernelTessellationTests.cpp
Viewer/: Application.h  CLAUDE.md  CMakeLists.txt  main.cxx
examples/glfw_standalone/: CMakeLists.txt  main.cxx
